# mkdocs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml
css/: material.css  mkdocstrings.css
reference/: SUMMARY.txt
reference/dataframe_functions/: index.html
reference/helper_functions/: index.html
scripts/: gen_ref_nav.py
search/: search_index.json
src/functions/: dataframe_functions.py  helper_functions.py
