[tool.poetry]
name = "mkdocs doc"
version = "0.10.0"
description = "An example of MKDocs"
authors = ["ossinova <oscar.dyremyhr@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ossinova/mkdocs/"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pyspark = ">2.0.0"
pytest = "3.2.2"
pytest-describe = "^1.0.0"
semver = "3.0.0"

[tool.poetry.group.mkdocs]
optional = true

[tool.poetry.group.mkdocs.dependencies]
mkdocstrings-python = "^0.8.3"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
markdown-include = "^0.8.1"
mkdocs-material = "^9.1.18"
markdown-exec = "^1.6.0"
mkdocs-minify-plugin = "^0.6.4"
mkdocs = "^1.4.2"

[tool.ruff]
# Allow lines to be as long as 150 characters.
line-length = 150
ignore = ["D100"]
required-version = "0.0.265"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"